kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiap-services
  labels:
    name: fiap-services
